--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
             </div>
 
             <div class="finding-card">
-                <div class="finding-icon">🔗</div>
+                <div class="finding-icon"></div>
                 <h4>Correlación Edad-Costo</h4>
                 <p class="text-color-white"><strong>0.059</strong> - Correlación débil positiva entre edad y costos de atención</p>
             </div>
